@@ -21,6 +21,7 @@ import net.sf.json.JSONNull
 import static com.jayway.restassured.assertion.AssertionSupport.escapeMinus
 import static com.jayway.restassured.assertion.AssertionSupport.generateWhitespace
 import static java.util.Arrays.asList
+import static com.jayway.restassured.assertion.AssertionSupport.escapeDoubleStar
 
 class JSONAssertion implements Assertion {
   String key;
