@@ -23,6 +23,7 @@ import static com.jayway.restassured.assertion.AssertionSupport.escapeMinus
 import static com.jayway.restassured.assertion.AssertionSupport.generateWhitespace
 import groovy.util.slurpersupport.*
 import static com.jayway.restassured.assertion.AssertionSupport.escapeAttributeGetter
+import static com.jayway.restassured.assertion.AssertionSupport.escapeDoubleStar
 
 class XMLAssertion implements Assertion {
   String key;
@@ -34,6 +35,7 @@ class XMLAssertion implements Assertion {
   def Object getResult(Object object) {
     key = escapeMinus(key);
     key = escapeAttributeGetter(key);
+    key = escapeDoubleStar(key);
     def indexOfDot = key.indexOf(".")
     def baseString
     def evaluationString
